Fix: dropdown z-index

--- a/www/Views/src/scss/front.scss
+++ b/www/Views/src/scss/front.scss
@@ -1,9 +1,7 @@
 @import 'main.scss';
 
 header {
-    height: 60px;
-    box-shadow: 0 2px 1px $gray;
-
+    height: 50px;
     position: fixed;
     width: 100%;
     z-index: 3;
@@ -20,7 +18,7 @@ header {
         position: absolute;
         right: 1.5rem;
         top: 70px;
-        z-index: 4;
+        z-index: 10;
         background-color: $white;
 
         a {
@@ -38,9 +36,10 @@ nav {
     z-index: 3;
     position: fixed;
     width: 100%;
-    top: 60px;
-    height: 60px;
+    top: 50px;
+    height: 50px;
     background-color: $white;
+    box-shadow: 0px 2px 2px rgba($text-black, .15);
 }
 
 main {
